build: 分离主题配置环境、本地环境、线上环境配置

--- a/themes/Silk/layout/index.ejs
+++ b/themes/Silk/layout/index.ejs
@@ -181,8 +181,7 @@
                         <div class="flex items-center">
                             <img src="<%- url_for('/images/default-avatar.jpg') %>" class="w-10 h-10 rounded-full">
                             <div class="ml-3">
-                                <div class="font-medium"><%= author.name %></div>
-                                <div class="text-sm text-gray-500"><%= author.title %></div>
+                                <div class="font-medium"><%= config.author.name %></div>
                             </div>
                         </div>
                     </div>
