--- a/themes/Silk/layout/post.ejs
+++ b/themes/Silk/layout/post.ejs
@@ -150,8 +150,8 @@
                     <div class="flex items-center">
                         <img src="<%- url_for('/images/default-avatar.jpg') %>" alt="Unknown Author" class="w-16 h-16 rounded-full">
                         <div class="ml-4">
-                            <h3 class="text-xl font-bold"><%= author.name || 'Unknown Author' %></h3>
-                            <p class="text-gray-600 mt-1"><%= author.bio || 'No bio available.' %></p>
+                            <h3 class="text-xl font-bold"><%= author?.name || 'Unknown Author' %></h3>
+                            <p class="text-gray-600 mt-1"><%= author?.bio || 'No bio available.' %></p>
                         </div>
                     </div>
                 </div>
