--- a/themes/Silk/layout/_widgets/index/hexoSection.ejs
+++ b/themes/Silk/layout/_widgets/index/hexoSection.ejs
@@ -1,3 +1,9 @@
+<!--
+ * @Author: zhangfu 18072150332@163.com
+ * @Date: 2025-07-14 23:09:04
+ * @LastEditors: zhangfu 18072150332@163.com
+ * @LastEditTime: 2025-07-17 21:30:34
+-->
 <!-- 英雄区域 -->
 <section
   class="min-h-screen flex items-center bg-gradient-to-br from-primary/5 to-secondary/5"
@@ -39,6 +45,7 @@
             src="https://picsum.photos/600/400?random=1"
             alt="技术与创意的融合"
             class="w-full max-w-md rounded-xl shadow-2xl relative z-10"
+            loading="lazy"
           />
         </div>
       </div>
