--- a/themes/Silk/layout/index.ejs
+++ b/themes/Silk/layout/index.ejs
@@ -2,7 +2,7 @@
  * @Author: zhangfu 18072150332@163.com
  * @Date: 2025-07-03 00:20:28
  * @LastEditors: zhangfu 18072150332@163.com
- * @LastEditTime: 2025-07-17 12:12:56
+ * @LastEditTime: 2025-07-18 12:45:41
 -->
 <!DOCTYPE html>
 <html lang="zh-CN">
@@ -27,21 +27,6 @@
     <!-- 关于我 -->
     <%- partial('_widgets/index/aboutSection') %>
 
-    <script>
-        // 移动端菜单切换
-        document.getElementById('menuBtn').addEventListener('click', function() {
-            document.getElementById('mobileMenu').classList.toggle('hidden');
-        });
-
-        // 导航栏滚动效果
-        window.addEventListener('scroll', function() {
-            const navbar = document.getElementById('navbar');
-            if (window.scrollY > 50) {
-                navbar.classList.add('bg-white', 'shadow-md');
-            } else {
-                navbar.classList.remove('bg-white', 'shadow-md');
-            }
-        });
-    </script>
+    <%- partial('_partials/footerJs') %>
 </body>
 </html>
