--- a/themes/Silk/layout/_widgets/post/comments.ejs
+++ b/themes/Silk/layout/_widgets/post/comments.ejs
@@ -1,3 +1,9 @@
+<!--
+ * @Author: zhangfu 18072150332@163.com
+ * @Date: 2025-07-18 13:27:36
+ * @LastEditors: zhangfu 18072150332@163.com
+ * @LastEditTime: 2025-07-19 13:14:28
+-->
 <section class="py-8 bg-white">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8">
     <section class="from-primary/5 to-secondary/5">
@@ -9,6 +15,8 @@
 <script>
   new Valine({
     el: "#vcomments",
+    avatar: 'mp',
+    avatar_cdn: 'https://cravatar.cn/avatar/',
     appId: "<%= config.Valine.appId %>",
     appKey: "<%= config.Valine.appKey %>",
   });
