--- a/themes/Silk/layout/_partials/head.ejs
+++ b/themes/Silk/layout/_partials/head.ejs
@@ -1,6 +1,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="<%= page.description || config.description %>">
+    <meta name="keywords" content="<%= page.keywords || config.keywords %>">
+    <!-- Open Graph -->
+    <meta property="og:title" content="<%= page.title %>">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="<%= page.permalink %>">
+    <meta property="og:image" content="<%= page.cover || config.cover %>">
+    <meta property="og:description" content="<%= page.description || config.description %>">
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="<%= page.title %>">
+    <meta name="twitter:description" content="<%= page.description || config.description %>">
+    <meta name="twitter:image" content="<%= page.cover || config.cover %>">
     <title><%= isPostPage ? (page.title || config.title): config.title %></title>
     <script src="<%- url_for('/js/tailwindcss3.4.16.js')%>"></script>
     <link rel="stylesheet" href="<%- url_for('/css/font-awesome.min.css')%>">
