--- a/themes/Silk/layout/_widgets/post/articleSection.ejs
+++ b/themes/Silk/layout/_widgets/post/articleSection.ejs
@@ -2,9 +2,9 @@
  * @Author: zhangfu 18072150332@163.com
  * @Date: 2025-07-18 12:41:07
  * @LastEditors: zhangfu 18072150332@163.com
- * @LastEditTime: 2025-07-18 12:41:30
+ * @LastEditTime: 2025-10-26 19:30:19
 -->
-<section class="pt-32 pb-16 bg-white">
+<section class="pt-32 pt-16 bg-white">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8">
     <div class="max-w-10xl mx-auto">
       <!-- 文章标题和元数据 -->
@@ -63,7 +63,7 @@
 
       <!-- 标签 -->
       <% if (page.tags && page.tags.length) { %>
-      <div class="mb-16">
+      <div class="mt-8 mb-8">
         <span class="text-gray-500 mr-3"><i class="fa fa-tags"></i> 标签:</span>
         <div class="inline-flex flex-wrap gap-2">
           <% page.tags.each(function(tag) { %>
@@ -80,7 +80,7 @@
 
       <!-- 作者信息 -->
       <div
-        class="bg-gradient-to-r from-primary/10 to-secondary/10 rounded-xl p-6 mb-16"
+        class="bg-gradient-to-r from-primary/10 to-secondary/10 rounded-xl p-6"
       >
         <div class="flex items-center">
           <img
